fix visibility issue

--- a/style/main.scss
+++ b/style/main.scss
@@ -131,3 +131,7 @@ footer a:hover {
 	position: absolute;
 	//width: 100%;
 }
+
+.invisible {
+	display: none;
+}
